--- a/lib/Web/HTML/Tokenizer.pod
+++ b/lib/Web/HTML/Tokenizer.pod
@@ -4,6 +4,8 @@ Web::HTML::Tokenizer - An HTML and XML tokenizer
 
 =head1 DESCRIPTION
 
+B<THIS MODULE IS DEPRECATED.  DON'T USE THIS MODULE FOR NEW APPLICATIONS.>
+
 The C<Web::HTML::Tokenizer> module provides an implementation of
 HTML and XML tokenizer.  Unlike its name, this module can be used for
 XML documents as well as HTML.  It is not intended to be used directly
