--- a/lib/Web/HTML/Parser.pod
+++ b/lib/Web/HTML/Parser.pod
@@ -273,4 +273,10 @@ Copyright 2007-2015 Wakaba <wakaba@suikawiki.org>.
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself.
 
+This library derived from a JSON file, which contains data extracted
+from HTML Standard.  "Written by Ian Hickson (Google, ian@hixie.ch) -
+Parts © Copyright 2004-2014 Apple Inc., Mozilla Foundation, and Opera
+Software ASA; You are granted a license to use, reproduce and create
+derivative works of this document."
+
 =cut
